--- a/api/package.json
+++ b/api/package.json
@@ -21,11 +21,22 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
-    "sequelize": "^6.3.4"
+    "baileys": "^1.1.1",
+    "date-utils-2020": "^1.0.1",
+    "express-gateway": "^1.16.10",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.17",
+    "node-emoji": "^1.10.0",
+    "nodemailer": "^6.4.17",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "random-date-generator": "^1.0.2",
+    "sequelize": "^6.4.0",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "supertest-session": "^4.0.0",
