--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,12 +1,11 @@
 {
   "development": {
-
     "username": "postgres",
-    "password": "1234", 
+    "password": "1234",
     "database": "mobadb",
-    "host": "127.0.0.1", 
+    "host": "127.0.0.1",
     "dialect": "postgres"
-  }, 
+  },
   "test": {
     "username": "postgres",
     "password": "1234",
@@ -16,6 +15,10 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
+    "ssl": true,
+    "dialectOptions": {
+      "ssl": true
+    },
     "dialect": "postgres"
   }
 }
